...
    case okCancel = 1
    case yesNo = 2
    case yesNoCancel = 3

    var buttonTitles: [String] {
        switch self {
        case .ok: ["OK"]
        case .okCancel: ["OK", "Cancel"]
        case .yesNo: ["Yes", "No"]
        case .yesNoCancel: ["Yes", "No", "Cancel"]
        }
    }

    func reply(for response: NSApplication.ModalResponse) -> ZoteroDocumentReply? {
...
